{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 40,
  "lineage": "da287d7c-d452-d6fa-74ef-6fdd891f5233",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkInterfaces/nic0",
            "internal_domain_name_suffix": "wbdafbdeughu3kcswzqezx4ihb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.50.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/publicIPAddresses/public-ip",
                "subnet_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0/subnets/Subnet0"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-8C-1C-5D",
            "name": "nic0",
            "private_ip_address": "10.50.0.4",
            "private_ip_addresses": [
              "10.50.0.4"
            ],
            "resource_group_name": "az104-05-rg1",
            "virtual_machine_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Compute/virtualMachines/vm0"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet0",
            "azurerm_virtual_network.vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkInterfaces/nic1",
            "internal_domain_name_suffix": "dlhoeflp1ohejpw4kl32q2mpvd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.51.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/Subnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-48-22-E2",
            "name": "nic1",
            "private_ip_address": "10.51.0.4",
            "private_ip_addresses": [
              "10.51.0.4"
            ],
            "resource_group_name": "az104-05-rg1",
            "virtual_machine_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Compute/virtualMachines/vm1"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/networkInterfaces/nic2",
            "internal_domain_name_suffix": "h4axckgejy4elogu0hwczfyjch.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.52.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/subnets/Subnet2"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-55-C9-83",
            "name": "nic2",
            "private_ip_address": "10.52.0.4",
            "private_ip_addresses": [
              "10.52.0.4"
            ],
            "resource_group_name": "az104-05-rg2",
            "virtual_machine_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Compute/virtualMachines/vm2"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg",
            "location": "westeurope",
            "name": "az104-05-nsg",
            "resource_group_name": "az104-05-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowInboundRDP",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "46.189.193.247",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg/securityRules/AllowInboundRDP",
            "name": "AllowInboundRDP",
            "network_security_group_name": "az104-05-nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "az104-05-rg1",
            "source_address_prefix": "46.189.193.247",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.234.225.244",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "public-ip",
            "resource_group_name": "az104-05-rg1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0/subnets/Subnet0",
            "name": "Subnet0",
            "resource_group_name": "az104-05-rg1",
            "virtual_network_name": "az104-05-vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.51.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/Subnet1",
            "name": "Subnet1",
            "resource_group_name": "az104-05-rg1",
            "virtual_network_name": "az104-05-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.52.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/subnets/Subnet2",
            "name": "Subnet2",
            "resource_group_name": "az104-05-rg2",
            "virtual_network_name": "az104-05-vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnetassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0/subnets/Subnet0",
            "network_security_group_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg",
            "subnet_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0/subnets/Subnet0"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.subnet0",
            "azurerm_virtual_network.vnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.50.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "840246b0-a164-4e8f-a852-b6604cdfc839",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0",
            "location": "westeurope",
            "name": "az104-05-vnet0",
            "resource_group_name": "az104-05-rg1",
            "subnet": [
              {
                "address_prefix": "10.50.0.0/24",
                "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0/subnets/Subnet0",
                "name": "Subnet0",
                "security_group": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-05-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.51.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "15e2ce1a-db6f-448e-bede-52fbc8718fab",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1",
            "location": "westeurope",
            "name": "az104-05-vnet1",
            "resource_group_name": "az104-05-rg1",
            "subnet": [
              {
                "address_prefix": "10.51.0.0/24",
                "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/subnets/Subnet1",
                "name": "Subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.52.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2871813f-4ec4-453c-b8d4-d1ec2c970917",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2",
            "location": "eastus",
            "name": "az104-05-vnet2",
            "resource_group_name": "az104-05-rg2",
            "subnet": [
              {
                "address_prefix": "10.52.0.0/24",
                "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/subnets/Subnet2",
                "name": "Subnet2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer0tovnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0/virtualNetworkPeerings/az104-05-vnet0_to_az104-05-vnet1",
            "name": "az104-05-vnet0_to_az104-05-vnet1",
            "remote_virtual_network_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1",
            "resource_group_name": "az104-05-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-05-vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet0",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer0tovnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0/virtualNetworkPeerings/az104-05-vnet0_to_az104-05-vnet2",
            "name": "az104-05-vnet0_to_az104-05-vnet2",
            "remote_virtual_network_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2",
            "resource_group_name": "az104-05-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-05-vnet0"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet0",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer1tovnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/virtualNetworkPeerings/az104-05-vnet1_to_az104-05-vnet0",
            "name": "az104-05-vnet1_to_az104-05-vnet0",
            "remote_virtual_network_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0",
            "resource_group_name": "az104-05-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-05-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet0",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer1tovnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1/virtualNetworkPeerings/az104-05-vnet1_to_az104-05-vnet2",
            "name": "az104-05-vnet1_to_az104-05-vnet2",
            "remote_virtual_network_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2",
            "resource_group_name": "az104-05-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-05-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet1",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer2tovnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/virtualNetworkPeerings/az104-05-vnet1_to_az104-05-vnet0",
            "name": "az104-05-vnet1_to_az104-05-vnet0",
            "remote_virtual_network_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet0",
            "resource_group_name": "az104-05-rg2",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-05-vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet0",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer2tovnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg2/providers/Microsoft.Network/virtualNetworks/az104-05-vnet2/virtualNetworkPeerings/az104-05-vnet2_to_az104-05-vnet1",
            "name": "az104-05-vnet2_to_az104-05-vnet1",
            "remote_virtual_network_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-05-rg1/providers/Microsoft.Network/virtualNetworks/az104-05-vnet1",
            "resource_group_name": "az104-05-rg2",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-05-vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet1",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    }
  ]
}